# ArgusControl_PumpController-V2

./: .gitignore  CMakeLists.txt  PHASE_4A_HARDENING_AUDIT_EVIDENCE.txt  PHASE_4A_HARDENING_IMPLEMENTATION_V2.patch  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
build_old/: .bin_timestamp  .ninja_deps  .ninja_log  cmake_install.cmake  config.env  flash_app_args  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json  x509_crt_bundle.S
build_old/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
build_old/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_old/esp-idf/: cmake_install.cmake
build_old/gdbinit/: gdbinit  symbols
build_old/log/: idf_py_stderr_output_24268  idf_py_stderr_output_56840  idf_py_stderr_output_67292  idf_py_stderr_output_85836  idf_py_stderr_output_91080  idf_py_stdout_output_24268  idf_py_stdout_output_37928  (+7 more)
docs/: ARCHITECTURE_PRINCIPLES.md  ARGUS_PHILOSOPHY.md  DEFERRED_HARDENING_REGISTER.md  DEVELOPMENT_RULES.md  MQTT_STANDARDS.md  NAMING_STANDARDS.md  PHASE_3B_WALKTHROUGH.md  PHASE_4A_HARDENING_AUDIT_CORRECTIVE_PLAN (AMENDED).md  PHASE_4A_HARDENING_AUDIT_CORRECTIVE_PLAN.md  PHASE_4A_IMPLEMENTATION_PLAN.md  PHASE_4A_Phase 4A Hardening — Amended Plan Sections.md  PHASE_4A_Phase 4A Hardening — Source-Reconciled Corrective Plan.md  PHASE_4A_Phase 4A Hardening — Walkthrough.md  PHASE_4A_RUNTIME_ACCEPTANCE.md  PHASE_4A_WALKTHROUGH.md  PHASE_4B1_WALKTHROUGH.md  PHASE_4B_IMPLEMENTATION_PLAN.md  PHASE_4C_IMPLEMENTATION_PLAN.md  PHASE_4C_MQTT_CONTRACT.md  PHASE_4D_1_IMPLEMENTATION_PLAN.md  PHASE_4D_2_IMPLEMENTATION_PLAN.md  PHASE_4D_3A_IMPLEMENTATION_PLAN.md  PHASE_4D_3_IMPLEMENTATION_PLAN.md  PHASE_4D_4_IMPLEMENTATION_PLAN.md  PHASE_4D_SECURITY_CONTRACT.md  Pass 1 - walkthrough.md  Pass 1.2 - walkthrough.md  Pass 1.4 - walkthrough.md  Pass 1.5 - walkthrough.md  Phase 4A Hardening Implementation - Task List.md  Phase 4B.2 Corrections — Implementation Plan.md  Phase 4B.2 Corrections — Walkthrough.md  Phase 4B.2 Final Source-Correction Pass — Walkthrough.md  Phase 4B.2 Walkthrough — Configuration Read-Write via HTTP Portal.md  Phase 4B.2 — Configuration Read-Write via HTTP (Revised).md  Phase 4B.2 — Durable Reset-Pending Marker Correction.md  Phase 4B.2 — Final Acceptance.md  Phase 4B.2 — Final Correctness Closure Walkthrough.md  Phase 4B.2 — Production NVS Seam Wiring Correction Walkthrough.md  Phase 4B.2 — Pure-Test Isolation and Reset Truthfulness Closure.md  (+29 more)
hmi/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  argus_auth_service.c  argus_auth_service.h  argus_authority_mgr.c  argus_authority_mgr.h  argus_authorization.c  argus_authorization.h  argus_browser_command.c  argus_browser_command.h  argus_browser_command_endpoint.c  argus_browser_command_endpoint.h  argus_can.c  argus_can.h  argus_cmd_parser.c  argus_cmd_parser.h  argus_cmd_router.c  argus_cmd_router.h  argus_commission.html  argus_config.c  argus_config.h  argus_config_overlay.c  argus_config_overlay.h  argus_console_helpers.c  argus_console_helpers.h  argus_controls.html  argus_conversions.c  argus_conversions.h  argus_factory_reset.c  argus_factory_reset.h  argus_feedback.c  argus_feedback.h  argus_http_route_inventory.c  argus_http_route_inventory.h  argus_http_security.c  argus_http_security.h  argus_http_server.c  argus_http_server.h  argus_identity.c  (+77 more)
tools/: provision_phase4d2.py  test_phase4b5_controls.mjs  test_phase4b6_portal.mjs  test_phase4d3_browser.mjs
(+152 files in other folders)
