idf_component_register(
    SRCS
        "app_main.c"
        "argus_mqtt_broker.c"
        "argus_config.c"
        "argus_conversions.c"
        "argus_feedback.c"
        "argus_step_gen.c"
        "argus_trajectory.c"
        "argus_cmd_parser.c"
        "argus_state_mgr.c"
        "argus_tests.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        lwip
        nvs_flash
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_pcnt
        esp_driver_gptimer
)
