idf_component_register(
    SRCS
        "app_main.c"
        "argus_mqtt_broker.c"
        "argus_config.c"
        "argus_conversions.c"
        "argus_feedback.c"
        "argus_step_gen.c"
        "argus_trajectory.c"
        "argus_cmd_parser.c"
        "argus_state_mgr.c"
        "argus_identity.c"
        "argus_nvs_config.c"
        "argus_authority_mgr.c"
        "argus_cmd_router.c"
        "argus_net_mgr.c"
        "argus_console_helpers.c"
        "argus_http_server.c"
        "argus_restart_mgr.c"
        "argus_config_overlay.c"
        "argus_json.c"
        "argus_tests_4a.c"
        "argus_tests.c"
    INCLUDE_DIRS "."
    REQUIRES
        console
        esp_driver_usb_serial_jtag
        esp_wifi
        esp_event
        esp_netif
        esp_app_format
        lwip
        nvs_flash
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_pcnt
        esp_driver_gptimer
        esp_timer
        esp_http_server
        mbedtls
)
