idf_component_register(
    SRCS
        "app_main.c"
        "argus_mqtt_broker.c"
        "argus_mqtt_contract.c"
        "argus_mqtt_runtime.c"
        "argus_config.c"
        "argus_conversions.c"
        "argus_feedback.c"
        "argus_step_gen.c"
        "argus_trajectory.c"
        "argus_cmd_parser.c"
        "argus_state_mgr.c"
        "argus_identity.c"
        "argus_nvs_config.c"
        "argus_authority_mgr.c"
        "argus_cmd_router.c"
        "argus_net_mgr.c"
        "argus_console_helpers.c"
        "argus_http_server.c"
        "argus_restart_mgr.c"
        "argus_factory_reset.c"
        "argus_config_overlay.c"
        "argus_json.c"
        "argus_service_policy.c"
        "argus_browser_command.c"
        "argus_browser_command_endpoint.c"
        "argus_password_verifier.c"
        "argus_security_store.c"
        "argus_security_migration.c"
        "argus_security_provisioning.c"
        "argus_local_recovery.c"
        "argus_authorization.c"
        "argus_session_manager.c"
        "argus_security_directory.c"
        "argus_auth_service.c"
        "argus_http_security.c"
        "argus_http_route_inventory.c"
        "argus_security_audit.c"
        "argus_security_admin.c"
        "argus_security_transition.c"
        "argus_security_http.c"
        "argus_tests_4a.c"
        "argus_tests_4b4.c"
        "argus_tests_4b4_step2.c"
        "argus_tests_4b5.c"
        "argus_tests_4b6.c"
        "argus_tests_4c.c"
        "argus_tests_4d2.c"
        "argus_tests_4d3.c"
        "argus_tests_4d3a.c"
        "argus_tests.c"
    INCLUDE_DIRS "."
    EMBED_TXTFILES
        "argus_controls.html"
        "argus_login.html"
        "argus_commission.html"
    REQUIRES
        console
        esp_driver_usb_serial_jtag
        esp_wifi
        esp_event
        esp_netif
        esp_app_format
        lwip
        nvs_flash
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_pcnt
        esp_driver_gptimer
        esp_timer
        esp_http_server
        mbedtls
        json
)
